# epitaph

./: Cargo.toml  index.html
public/snake/: index.html  snake.js  snake.wasm
src/: main.rs
