[package]
name = "epitaph"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["webgl", "web-colors", "fira-sans"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlIFrameElement",
] }

[profile.release]
debug = false
lto = true
opt-level = "z"
panic = 'abort'
codegen-units = 1
